:bug: Fix text overflow

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -20,6 +20,7 @@
 
 .text {
   line-height: 1.2;
+  padding-bottom: 2px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
